--- a/calc.css
+++ b/calc.css
@@ -35,7 +35,7 @@ position: absolute;
   left:2vw;
 }
 
-.key, #test{
+.key{
  display: block;
  width: 24vw;
  height: 18vw;
@@ -54,7 +54,14 @@ position: absolute;
 width: fit-content;
 height: fit-content;
 font-size: 1em;
-padding: 0.2em;
+background-color: #010153;
+ border: 1px solid lightgreen;
+ border-radius:15%;
+ color: white;
+ font-weight:normal;
+ text-align: center;
+ margin: 0.1vw 0.5vw;
+
 }
 
 #keys{
