--- a/calc.css
+++ b/calc.css
@@ -50,7 +50,7 @@ position: absolute;
  margin: 0.1vw 0.5vw;
 }
 
-#test{
+#test, #test2, #test3{
 width: fit-content;
 height: fit-content;
 font-size: 1em;
@@ -128,6 +128,6 @@ text-align: center;
  font-size: 3.5vw;
  }
  
- #test{
+ #test, #test2, #test3{
    margin:1vw;
  }
