--- a/calcStyle.css
+++ b/calcStyle.css
@@ -1,7 +1,12 @@
+html{
+font-size: 62.5%;
+}
+
 body{
-  background-color: darkblue; /* #5d0505 */
+  background-color: rgb(11,11,95); /* #5d0505 */
   margin: 0;
 }
+
 #lcd-frame{
 display: block;
 width: 100%;
@@ -16,7 +21,7 @@ width: 95%;
 height: 24vw;
 margin: 0 auto;
 padding-right: 0.1em;
- background-color: darkblue;
+ background-color: rgb(11,11,95);
  color: white;
  border: 1px solid black;
 border-radius:10%;
@@ -28,28 +33,34 @@ line-height: 180%;
 #lastOpDispl{
   display: block;
   color:magenta;
- font-weight: bold;
-  font-size: 8vw;
-position: absolute;
-  top: -1vw;
-  left:2vw;
+  font-weight: bold;
+  font-size: 2.5rem;
+  position: absolute;
+  top: -0.7rem;
+  left:-0.2rem;
 }
 
 .key{
  display: block;
  width: 24vw;
  height: 18vw;
- background-color: #010153;
+ background-color: rgb(1,1,83,1);
  border: 1px solid lightgreen;
  border-radius:15%;
  color: white;
- font-size:15vw;
- font-weight:normal;
+ font-size:10vw;
+ font-weight:bolder;
  text-align: center;
  line-height: 150%;
  margin: 0.1vw 0.5vw;
 }
 
+ #help{
+ font-size:10vw;
+ color: white;
+ text-decoration: none;
+ }
+ 
 #test, #test2, #test3{
 width: fit-content;
 height: fit-content;
@@ -61,7 +72,6 @@ background-color: #010153;
  font-weight:normal;
  text-align: center;
  margin: 0.1vw 0.5vw;
-
 }
 
 #keys{
@@ -72,6 +82,7 @@ background-color: #010153;
   flex-wrap: wrap;
   justify-content:flex-start;
   align-items: flex-start;
+  font-weight: bold;
 } 
 
 .top-clue{
@@ -80,32 +91,37 @@ background-color: #010153;
 }
 
 span, p{
+ height:1.3rem;
+ padding: 0.3rem;
  color: yellow;
- margin-top:.1em;
- margin-bottom:.1em;
+ margin-top:0.1rem;
+ margin-bottom:0.1rem;
 }
 
-.visual-top, .visual-clue {
-  width: 30%;
+.visual-top {
+  border: 1px solid #90ee9080;
+  border-radius: 0.3rem;
+  width: 49%;
   display: flex;
   flex-direction:row;
   flex-wrap:nowrap;
   justify-content:space-between;
-  margin-right: 1em;
+  align-items: center;
+  margin-left: 0.5rem;
 }
 
-.top-clue{
+.top-clue{/*outline: 1px solid red; */
+  width: 99%;
   display: flex;
   flex-direction:row;
   flex-wrap:nowrap;
   justify-content:space-between;
 }
-.visual-clue{
-  width:30%;
-  
-}
-#debug{outline: 1px solid transparent ;
+
+#debug{outline: 1px solid transparent;
+ font-size: 1.2rem;
   margin-top:3vw;
+  margin-left:0;
   display:flex;
   flex-direction: column;
   flex-wrap: nowrap;
@@ -114,20 +130,39 @@ span, p{
 }
 
 #notification-area{
-outline: 1px solid yellow ;
-display: block;
-width: 99%;
-height: 12vw;
-margin: 2vw auto;
-text-align: center;
+border: 1px solid #90ee90cc;
+border-radius: 0.3rem;
+display: flex;
+flex-direction:row ;
+flex-wrap:nowrap;
+justify-content:flex-start ;
+align-items:flex-start ;
+width: 98%;
+height: 6.5rem;
+text-align: left;
+white-space: pre-wrap;
+margin:0 auto;
 }
 
  #notification{
  color: white ;
  font-weight: normal;
- font-size: 3.5vw;
+ font-size: 1.2rem;
+ 
  }
  
  #test, #test2, #test3{
    margin:1vw;
+ }
+ 
+ #test{
+ padding:0.5rem;
+ display:block;
+ margin:3rem auto;
+ text-decoration: none;
+ }
+ 
+ #help-page{
+ font-size:2rem;
+ color:white;
  }
